# eye-tracking

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
include/: BlinkDetector.h  CommandController.h  EyeTracker.h  GazeEstimator.h  PlatformController.h  Utils.h
src/: BlinkDetector.cpp  CommandController.cpp  EyeTracker.cpp  GazeEstimator.cpp  Utils.cpp  main.cpp
src/platform/: WindowsController.cpp
tmp/: CMakeLists.txt
tmp/src/: eye_gaze_tracker.cpp
